# sl-wasm

./: Cargo.toml  README.md  build.sh  index.html
assets/: index.js  loadWasm.js
assets/pkg/: sl-rs.js  sl-rs_bg.wasm
src/: c51.rs  common.rs  d51.rs  lib.rs  logo.rs  main.rs  term_buf.rs  train.rs
