[package]
name = "sl-rs"
version = "1.0.1"
authors = ["yasuhara <yasuhara@gmail.com>"]
repository = "https://bitbucket.org/yshryk/sl-rs"
homepage = "https://bitbucket.org/yshryk/sl-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
Pure Rust port of the SL, an old joke command.
SL (Steam Locomotive) runs across your terminal when you type "sl" as you meant to type "ls"."""
keywords = ["joke"]
categories = ["command-line-utilities"]
exclude = [
    "*.iml"
]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.39"
wasm-logger = {git = "https://github.com/bridger-herman/wasm-logger.git"}
log = "0.4"
lazy_static = "1.3"
